applications/gitlab/base/resources/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute-gitlab-ssh
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-system
      sectionName: tcp-gitlab-ssh
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: gitlab-gitlab-shell
          port: 2222
